--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand d-flex align-items-center">
-    <img src="../../../../assets/images/logo.png" class="d-inline-block align-top mr-3" alt="Logo">
+    <img src="https://www.nicepng.com/png/full/902-9026377_freetoedit-rick-morty-rickandmorty-shadow-wallpaper-rick-and.png"
+    class="d-inline-block align-top mr-3" alt="Logo">
     <span>Rick and Morty</span>
   </a>
 
