v2 - Criando loading para requisições http

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div>
   <app-nav-bar></app-nav-bar>
-  <router-outlet></router-outlet>
+  <router-outlet>
+    <app-loading></app-loading>
+  </router-outlet>
 </div>
