--- a/src/app/modules/public/components/characters-list/characters-list.component.html
+++ b/src/app/modules/public/components/characters-list/characters-list.component.html
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <div *ngIf="!endOfList" class="load-more col-12 text-center py-3">
+  <div *ngIf="!endOfList && characters[0]" class="load-more col-12 text-center py-3">
     <button type="button" class="btn btn-outline-primary" (click)="getCharacters()">Ver Mais</button>
   </div>
 </div>
